--- a/extras/canaries/repo-canary/Cargo.toml
+++ b/extras/canaries/repo-canary/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 authors = ["Erikson Tung <etung@amazon.com>"]
 edition = "2018"
 publish = false
+build = "build.rs"
 
 [dependencies]
+chrono = "0.4"
 signal-hook = "0.1.12"
 log = "0.4"
 rand = "0.7.0"
@@ -13,4 +15,7 @@ reqwest = { version = "0.9.17", default-features = false, features = ["rustls-tl
 simplelog = "0.7"
 snafu = "0.5.0"
 tempfile = "3.1.0"
-tough = { version = "0.1.0", features = ["http"] }
+tough = { version = "0.2.0", features = ["http"] }
+
+[build-dependencies]
+cargo-readme = "3.1"
