--- a/workspaces/updater/update_metadata/Cargo.toml
+++ b/workspaces/updater/update_metadata/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0.100", features = ["derive"] }
 serde_json = "1.0.40"
 serde_plain = "0.3.0"
 snafu = "0.5.0"
+migrator = { path = "../../api/migration/migrator" }
 
 [lib]
 name = "update_metadata"
