host-containers-pipeline: buildpsecs, pipeline cfn, refactor paths
Modify dogswatch makefile `release-container` target to tag the
dogswatch image with `latest`

Adds buildspec for the build, test, deploy step in the host-container pipeline

Adds a version file, `VERSION`, for admin and control
container folders to keep track of container version.

Moved host containers to new paths, add CTR_VER build arguments to
`thar-admin` and `thar-control`

--- a/extras/host-containers/thar-control/Dockerfile
+++ b/extras/host-containers/thar-control/Dockerfile
@@ -1,4 +1,8 @@
 FROM amazonlinux:2
+ARG CTR_IMG_VER
+# Make the container image version a mandatory build argument
+RUN test -n "$CTR_IMG_VER"
+ENV CTR_IMG_VER $CTR_IMG_VER
 
 RUN yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm shadow-utils
 
