--- a/packages/workspaces/Cargo.toml
+++ b/packages/workspaces/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 build = "build.rs"
 
 [package.metadata.build-package]
+variant-sensitive = true
 source-groups = [
     "api",
     "growpart",
