--- a/workspaces/api/sundog/Cargo.toml
+++ b/workspaces/api/sundog/Cargo.toml
@@ -11,6 +11,7 @@ apiclient = { path = "../apiclient" }
 apiserver = { path = "../apiserver" }
 http = "0.1"
 log = "0.4"
+models = { path = "../../models" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 simplelog = "0.7"
