--- a/workspaces/api/thar-be-settings/Cargo.toml
+++ b/workspaces/api/thar-be-settings/Cargo.toml
@@ -14,6 +14,7 @@ handlebars = "2.0"
 http = "0.1"
 itertools = "0.8"
 log = "0.4"
+models = { path = "../../models" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 simplelog = "0.7"
