sdk: include selinux tools
These provide `secilc` for compiling CIL policies, and `setfiles` for
parsing file_contexts to generate labels.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/extras/sdk-container/Dockerfile
+++ b/extras/sdk-container/Dockerfile
@@ -11,7 +11,8 @@ RUN \
     bc hostname intltool grub2-tools gperf kmod rsync wget \
     elfutils-devel libcap-devel openssl-devel \
     createrepo_c e2fsprogs gdisk grub2-tools \
-    kpartx lz4 veritysetup dosfstools mtools && \
+    kpartx lz4 veritysetup dosfstools mtools \
+    policycoreutils secilc && \
   dnf clean all && \
   useradd builder
 
