Use separate containerd configs in aws-k8s and aws-dev
We were failing to write the containerd config in the dev image because
pod-infra-container-image wasn't set -- because it lives in the Kubernetes
settings we don't have in the dev image.

We don't need a pod-infra-container-image (or similar) setting in the dev image
because we use containerd through Docker which doesn't use it.  So, the
clearest change is to split the containerd config file, removing the irrelevant
cri-plugin settings from the dev version, including the
pod-infra-container-image setting.

--- a/workspaces/models/aws-dev/defaults.toml
+++ b/workspaces/models/aws-dev/defaults.toml
@@ -20,6 +20,17 @@ template-path = "/usr/share/templates/hostname"
 [metadata.settings.hostname]
 affected-services = ["hostname"]
 
+# Container runtime.
+
+[services.containerd]
+configuration-files = ["containerd-config-toml"]
+restart-commands = []
+
+[configuration-files.containerd-config-toml]
+path = "/etc/containerd/config.toml"
+template-path = "/usr/share/templates/containerd-config-toml_aws-dev"
+
+
 # Updog.
 
 [services.updog]
