--- a/extras/sdk-container/configs/buildroot/sdk_aarch64_musl_defconfig
+++ b/extras/sdk-container/configs/buildroot/sdk_aarch64_musl_defconfig
@@ -14,3 +14,4 @@ BR2_GCC_VERSION="9.2.0"
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
 BR2_GCC_ENABLE_GRAPHITE=y
+BR2_GNU_MIRROR="https://mirrors.kernel.org/gnu"
