--- a/workspaces/updater/signpost/Cargo.toml
+++ b/workspaces/updater/signpost/Cargo.toml
@@ -12,4 +12,4 @@ gptman = { version = "0.5.0", default-features = false }
 hex-literal = "0.2.0"
 serde = { version = "1.0.91", features = ["derive"] }
 serde_plain = "0.3.0"
-snafu = { version = "0.5.0", default-features = false, features = ["rust_1_30"] }
+snafu = { version = "0.6.0", default-features = false, features = ["std"] }
