sdk: Set DOCKER_BUILDKIT=1

--- a/extras/sdk-container/Makefile
+++ b/extras/sdk-container/Makefile
@@ -5,7 +5,7 @@ TAG := thar/sdk-$(ARCH):$(VERSION)
 ARCHIVE := thar-sdk-$(ARCH)-$(VERSION).tar.gz
 
 $(ARCHIVE) :
-	@docker build . -t $(TAG) --squash --build-arg ARCH=$(ARCH)
+	@DOCKER_BUILDKIT=1 docker build . -t $(TAG) --squash --build-arg ARCH=$(ARCH)
 	@docker image save $(TAG) | gzip --fast > $(@)
 
 .PHONY: upload clean
