Allow for variant-specific default settings
This deduplicates the common defaults between variants.  The merge function
also opens the way for having even more locations for defaults, i.e. shared
modules, if desired.  (Note, though, that they're currently being read in at
compile time via include_str so we don't have to include them in the image, and
there's only so much we can do at compile time with regard to file selection.)

--- a/workspaces/models/defaults.toml
+++ b/workspaces/models/defaults.toml
@@ -1,5 +1,9 @@
-# OS-level defaults.
-# Should match the structures in the model definition.
+# Here we define default values for the settings in the API model.
+# Variant builds can override or supplement these in
+# src/VARIANT/override-defaults.toml.
+
+# The structures, fields, and types here need to match those of the API model,
+# as defined in src/VARIANT/mod.rs.
 
 [settings]
 timezone = "America/Los_Angeles"
@@ -28,7 +32,7 @@ restart-commands = []
 
 [configuration-files.containerd-config-toml]
 path = "/etc/containerd/config.toml"
-template-path = "/usr/share/templates/containerd-config-toml_aws-dev"
+template-path = "/usr/share/templates/containerd-config-toml"
 
 
 # Updog.
