ci: include generated build materials as artifacts
These will be shipped with the build artifacts throughout their
lifecycle spent in release automation land.

Signed-off-by: Jacob Vallejo <jakeev@amazon.com>

--- a/tools/infra/buildspec/thar-pr-build.yml
+++ b/tools/infra/buildspec/thar-pr-build.yml
@@ -26,6 +26,8 @@ artifacts:
   base-directory: 'build/'
   files:
     - '*.img*'
+    - '*.txt'
+    - '*.toml'
   secondary-artifacts:
     meta:
       base-directory: 'build/meta'
