--- a/workspaces/models/Cargo.toml
+++ b/workspaces/models/Cargo.toml
@@ -9,6 +9,7 @@ build = "build.rs"
 [dependencies]
 base64 = "0.11"
 lazy_static = "1.2"
+model-derive = { path = "model-derive" }
 regex = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 snafu = "0.6"
